clipping overflow hidden bug on phone onclick transition

--- a/src/App.sass
+++ b/src/App.sass
@@ -184,11 +184,11 @@ p, span
       height: 500px;
       overflow: hidden;
       z-index: 50;
-      background-color: rgba(40, 40, 40, 0.7);
-      -webkit-transition: width 0.4s ease-out, height 0.4s ease-out, background-color 0.2s ease 0.4s, backdrop-filter 0.2s ease 0.4s;
-      -moz-transition: width 0.4s ease-out, height 0.4s ease-out, background-color 0.2s ease 0.4s, backdrop-filter 0.2s ease 0.4s;
-      -o-transition: width 0.4s ease-out, height 0.4s ease-out, background-color 0.2s ease 0.4s, backdrop-filter 0.2s ease 0.4s;
-      transition: width 0.4s ease-out, height 0.4s ease-out, background-color 0.2s ease 0.4s, backdrop-filter 0.2s ease 0.4s;
+      // background-color: rgba(40, 40, 40, 0.7);
+      -webkit-transition: width 0.3s ease-out, height 0.3s ease-out, background-color 0.2s ease 0.3s, backdrop-filter 0.2s ease 0.3s;
+      -moz-transition: width 0.3s ease-out, height 0.3s ease-out, background-color 0.2s ease 0.3s, backdrop-filter 0.2s ease 0.3s;
+      -o-transition: width 0.3s ease-out, height 0.3s ease-out, background-color 0.2s ease 0.3s, backdrop-filter 0.2s ease 0.3s;
+      transition: width 0.3s ease-out, height 0.3s ease-out, background-color 0.2s ease 0.3s, backdrop-filter 0.2s ease 0.3s;
       &.playing
         width: 100%;
         height: 100%;
@@ -198,6 +198,8 @@ p, span
         display: flex; // make us of Flexbox
         align-items: center; // does vertically center the desired content
         justify-content: center; // horizontally centers single line items
+        &.in-progress
+          overflow: auto!important;
         .florida__case-file--phone-img
           transform: rotate(0deg);
           width: 750px;
